urgent fix `List.of()` → `Arrays.asList()`